# pds

./: LICENSE  README.md  pds  pds-files  pds-files.bat  pds-files.py  pds-procs  pds-procs.bat  pds-procs.py  pds-text-read.py  pds-text-write.py  pds.bat  pds.py  pyproject.toml  release.py
src/: pds.py
tests/: test_chain.py  test_json.py  test_paths.py  test_pds.py  test_procs.py
